--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     volumes:
       - ../:/app
     tty: true
-    image: chatapp-sample
-    container_name: chatapp-sample-container
+    image: chatbot-sample
+    container_name: chatbot-sample-container
     environment:
       TZ: 'Asia/Tokyo'
     network_mode: 'host'
